syntax = "proto3";

option go_package = "./protos";

service UserService {
  rpc UserApi (UserRequest) returns (UserResponse);
}

message UserRequest {
  string name = 1;
  string surname = 2;
  string password = 3;
  string number = 4;
}

message UserResponse {
  string resp =1;
  
}
